# Cantor

./: .gitattributes  CMakeLists.txt  Notes.md  README.md  build.py  setup.py
Config/: config.yaml
Python/cantor/: cli.py
Script/: httpsrv.py  init.py  readme.md  wss.py
Script/ssl/: cert.pem  key.pem
dotnet/: ClientTest.sln
dotnet/CantorClient/: CantorClient.cs  CantorClient.csproj  CantorClient.sln  Frame.cs  GrusStream.cs  SMSwapBuffer.cs  SwapBufferStream.cs
dotnet/ClientTest/: ClientTest.csproj  Program.cs
factory/: activity.html  dashboard.html  dataset.html  index.html  menu.html  nodemap.html  pipeline.html  toolbar.html
src/: CMakeLists.txt
src/Common/: CantorWait.cpp  CantorWait.h  gthread.cpp  gthread.h  gxydef.h  port.h  service_def.h  utility.cpp  utility.h
src/Core/: KVCache.cpp  KVCache.h  gvar.cpp  gvar.h
src/DataFrame/: DataFrameWrapper.cpp  DataFrameWrapper.h  FramePack.cpp  FramePack.h  frame.cpp  frame.h  tensor.cpp  tensor.h
src/DataView/: DataView.cpp  DataView.h
src/Database/: dbmgr.cpp  dbmgr.h  dbop.cpp  dbop.h
src/Database/sqlite/: cantorstore.db
src/Include/: cantor_host.h
src/Log/: log.cpp  log.h
src/Main/: CantorAPISet.h  CantorHost.cpp  CantorHost.h  Config.cpp  Config.h  ConnectGraph.cpp  ConnectGraph.h  NodeManager.cpp  NodeManager.h  WorkerMode.cpp  WorkerMode.h  main.cpp  main.h
src/Network/: DataFramePack.cpp  DataFramePack.h  Forward.cpp  Forward.h  NetworkManager.cpp  NetworkManager.h  RegistryClient.cpp  RegistryClient.h  RegistryServer.cpp  RegistryServer.h  clientthread.cpp  clientthread.h  srvthread.cpp  srvthread.h  tmsession.cpp  tmsession.h
src/Python/: Frame.py  __init__.py  cli.py  task.py
src/Streaming/: CantorActivity.cpp  CantorActivity.h
src/Tasks/: TaskManager.cpp  TaskManager.h  objectstore.cpp  objectstore.h  remoting.cpp  remoting.h  workermanager.cpp  workermanager.h
test/client/: network_test.x  remotingtest.py  simple_test.x  test_task.x  testclient.py  testclient.x
test/data/: test.yaml  yaml_test.py
test/pipeline/: pipeline01.yaml  test01.py
test/server/: start_srv.x
test/task/: task_test.py
(+10 files in other folders)
